unfinished version of the history feature, jdk runtime errors